optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_extract_single_qrl.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal, Signal } from '@qwik.dev/core';
export const App = component$(() => {
	const data = useSignal<Signal<any>[]>([]);
	const selectedItem = useSignal<any | null>(null);
    return (
        <div>
          {data.value.map((row) => (
              <tr
                key={untrack(() => row.value.id)}
                class={row.value.selected.value ? "danger" : ""}
              >
                <td class="col-md-1">{row.value.id}</td>
                <td class="col-md-4">
                  <a
                    onClick$={() => {
                      if (selectedItem.value) {
                        selectedItem.value.selected.value = false;
                      }
                      selectedItem.value = row.value;
                      row.value.selected.value = true;
                    }}
                  >
                    {row.value.label.value}
                  </a>
                </td>
                <td class="col-md-1">
                  <a
                    onClick$={() => {
                      const dataValue = untrack(() => data.value);
                      data.value = dataValue.toSpliced(
                        dataValue.findIndex((d) => d.value.id === row.value.id),
                        1,
                      );
                    }}
                  >
                    <span aria-hidden="true">x</span>
                  </a>
                </td>
                <td class="col-md-6" />
              </tr>
          ))}
        </div>
      );
    });

============================= test.tsx_App_component_div_map_tr_td_a_onClick_1_oAuQ8nCHRUg.tsx (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const App_component_div_map_tr_td_a_onClick_1_oAuQ8nCHRUg = (_, _1, row)=>{
	const [data] = useLexicalScope();
	const dataValue = untrack(()=>data.value);
	data.value = dataValue.toSpliced(dataValue.findIndex((d)=>d.value.id === row.value.id), 1);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_map_tr_td_a_onClick_1_oAuQ8nCHRUg",
  "entry": null,
  "displayName": "test.tsx_App_component_div_map_tr_td_a_onClick_1",
  "hash": "oAuQ8nCHRUg",
  "canonicalFilename": "test.tsx_App_component_div_map_tr_td_a_onClick_1_oAuQ8nCHRUg",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
const _hf0 = (p0)=>p0.value.selected.value ? "danger" : "";
const _hf0_str = "p0.value.selected.value?`danger`:``";
const _hf1 = (p0)=>p0.value.id;
const _hf1_str = "p0.value.id";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


None
============================= test.tsx_App_component_ckEPmXZlub0.tsx (ENTRY POINT)==

import { _fnSignal, _jsxSorted, qrl, useSignal } from "@qwik.dev/core";
const i_oAuQ8nCHRUg = ()=>import("./test.tsx_App_component_div_map_tr_td_a_onClick_1_oAuQ8nCHRUg");
const i_mlLHNlVHR0g = ()=>import("./test.tsx_App_component_div_map_tr_td_a_onClick_mlLHNlVHR0g");
export const App_component_ckEPmXZlub0 = ()=>{
	const data = useSignal([]);
	const selectedItem = useSignal(null);
	return /*#__PURE__*/ _jsxSorted("div", null, null, data.value.map((row)=>/*#__PURE__*/ _jsxSorted("tr", { class: _fnSignal(_hf0, [row], _hf0_str) }, null, [
		/*#__PURE__*/ _jsxSorted("td", null, { class: "col-md-1" }, _fnSignal(_hf1, [row], _hf1_str), 1, null),
		/*#__PURE__*/ _jsxSorted("td", null, { class: "col-md-4" }, /*#__PURE__*/ _jsxSorted("a", { on:click: /*#__PURE__*/ qrl(i_mlLHNlVHR0g, "App_component_div_map_tr_td_a_onClick_mlLHNlVHR0g", [selectedItem]) }, null, _wrapProp(row.value.label), 1, null), 3, null),
		/*#__PURE__*/ _jsxSorted("td", null, { class: "col-md-1" }, /*#__PURE__*/ _jsxSorted("a", { on:click: /*#__PURE__*/ qrl(i_oAuQ8nCHRUg, "App_component_div_map_tr_td_a_onClick_1_oAuQ8nCHRUg", [data]) }, null, /*#__PURE__*/ _jsxSorted("span", null, { aria-hidden: "true" }, "x", 3, null), 3, null), 3, null),
		/*#__PURE__*/ _jsxSorted("td", null, { class: "col-md-6" }, null, 3, null)
	], 3, untrack(()=>row.value.id))), 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    97,
    1545
  ]
}
*/
============================= test.tsx_App_component_div_map_tr_td_a_onClick_mlLHNlVHR0g.tsx (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const App_component_div_map_tr_td_a_onClick_mlLHNlVHR0g = (_, _1, row)=>{
	const [selectedItem] = useLexicalScope();
	if (selectedItem.value) {
		selectedItem.value.selected.value = false;
	}
	selectedItem.value = row.value;
	row.value.selected.value = true;
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_map_tr_td_a_onClick_mlLHNlVHR0g",
  "entry": null,
  "displayName": "test.tsx_App_component_div_map_tr_td_a_onClick",
  "hash": "mlLHNlVHR0g",
  "canonicalFilename": "test.tsx_App_component_div_map_tr_td_a_onClick_mlLHNlVHR0g",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
