optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_extract_single_qrl_with_index.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal, Signal } from '@qwik.dev/core';
export const App = component$(() => {
	const data = useSignal<Signal<any>[]>([]);
	const selectedItem = useSignal<any | null>(null);
	const clickedIndex = useSignal<number | null>(null);
    return (
        <div>
          {data.value.map((row, idx) => (
              <tr
                key={untrack(() => row.value.id)}
                class={row.value.selected.value ? "danger" : ""}
              >
                <td class="col-md-1">{row.value.id}</td>
                <td class="col-md-4">
                  <a
                    onClick$={() => {
                      if (selectedItem.value) {
                        selectedItem.value.selected.value = false;
                      }
                      selectedItem.value = row.value;
                      row.value.selected.value = true;
					  clickedIndex.value = idx;
                    }}
                  >
                    {row.value.label.value}
                  </a>
                </td>
                <td class="col-md-1">
                  <a
                    onClick$={() => {
                      const dataValue = untrack(() => data.value);
                      data.value = dataValue.toSpliced(
                        dataValue.findIndex((d) => d.value.id === row.value.id),
                        1,
                      );
                    }}
                  >
                    <span aria-hidden="true">x</span>
                  </a>
                </td>
                <td class="col-md-6" />
              </tr>
          ))}
        </div>
      );
    });

============================= ./should_extract_single_qrl_with_index.tsx_App_component_BG7ATvMKir4.js (ENTRY POINT)==

import{_fnSignal,_jsxSorted,qrl,useSignal}from"@qwik.dev/core";export const App_component_BG7ATvMKir4=()=>{let data=useSignal([]),selectedItem=useSignal(null),clickedIndex=useSignal(null);return/* @__PURE__ */ _jsxSorted(`div`,null,null,data.value.map((row,idx)=>/* @__PURE__ */ _jsxSorted(`tr`,{class:_fnSignal((p0,p1)=>p0.value.selected.value?`danger`:``,[row,idx],"p0.value.selected.value?`danger`:``")},null,[/* @__PURE__ */ _jsxSorted(`td`,null,{class:`col-md-1`},_fnSignal((p0,p1)=>p0.value.id,[row,idx],`p0.value.id`),1,null),/* @__PURE__ */ _jsxSorted(`td`,null,{class:`col-md-4`},/* @__PURE__ */ _jsxSorted(`a`,{on:click:qrl(()=>import(`./should_extract_single_qrl_with_index.tsx.js`),`App_component_div_map_tr_td_a_onClick`,[clickedIndex,selectedItem])},null,_wrapProp(row.value.label),1,null),3,null),/* @__PURE__ */ _jsxSorted(`td`,null,{class:`col-md-1`},/* @__PURE__ */ _jsxSorted(`a`,{on:click:qrl(()=>import(`./should_extract_single_qrl_with_index.tsx.js`),`App_component_div_map_tr_td_a_onClick_1`,[data])},null,/* @__PURE__ */ _jsxSorted(`span`,null,{aria-hidden:`true`},`x`,3,null),3,null),3,null),/* @__PURE__ */ _jsxSorted(`td`,null,{class:`col-md-6`},null,3,null)],3,untrack(()=>row.value.id))),1,null)};

None
/*
{
  "origin": "should_extract_single_qrl_with_index.tsx",
  "name": "App_component_BG7ATvMKir4",
  "entry": null,
  "displayName": "should_extract_single_qrl_with_index.tsx_App_component",
  "hash": "BG7ATvMKir4",
  "canonicalFilename": "should_extract_single_qrl_with_index.tsx_App_component_BG7ATvMKir4",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "App_component_BG7ATvMKir4",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= should_extract_single_qrl_with_index.tsx ==

import{componentQrl,qrl}from"@qwik.dev/core";export const App=componentQrl(qrl(()=>import(`./should_extract_single_qrl_with_index.tsx_App_component_BG7ATvMKir4.js`),`App_component_BG7ATvMKir4`));

None
== DIAGNOSTICS ==

[]
