optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_wrap_type_asserted_variables_in_template.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from '@qwik.dev/core';

export default component$(() => {
	const count = useSignal(0);
	return (
		<div>
			{(count as any).value}
		</div>
	);
});

============================= should_wrap_type_asserted_variables_in_template.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_component_GColZQ6KlD8 = () => import("./should_wrap_type_asserted_variables_in_template.tsx_component_GColZQ6KlD8.js");
export default componentQrl(qrl(i_component_GColZQ6KlD8, "component_GColZQ6KlD8"));


None
============================= ./should_wrap_type_asserted_variables_in_template.tsx_component_GColZQ6KlD8.js (ENTRY POINT)==

import { _jsxSorted, useSignal } from "@qwik.dev/core";
export const component_GColZQ6KlD8 = () => {
	const count = useSignal(0);
	return /*#__PURE__*/ _jsxSorted("div", null, null, _wrapProp(count), 1, null);
};


None
/*
{
  "origin": "should_wrap_type_asserted_variables_in_template.tsx",
  "name": "component_GColZQ6KlD8",
  "entry": null,
  "displayName": "should_wrap_type_asserted_variables_in_template.tsx_component",
  "hash": "GColZQ6KlD8",
  "canonicalFilename": "should_wrap_type_asserted_variables_in_template.tsx_component_GColZQ6KlD8",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component_GColZQ6KlD8",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
