optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_ternary_prop.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $, useSignal } from '@qwik.dev/core';
export const Cmp = component$(() => {
	const toggleSig = useSignal(false);

	const handleClick$ = $(() => {
		toggleSig.value = !toggleSig.value;
	});

	return (
		<button onClick$={handleClick$} data-open={toggleSig.value ? true : undefined}>
			Removing data-open re-renders
		</button>
	);
});

============================= ./ternary_prop.tsx_Cmp_component_wXRs53PuG1k.js (ENTRY POINT)==

import { _jsxSorted, qrl, useSignal } from "@qwik.dev/core";
export const Cmp_component_wXRs53PuG1k = () => {
	const toggleSig = useSignal(false);
	const handleClick$ = qrl(() => import("./ternary_prop.tsx_Cmp_component_handleClick_1_3TrHxsRcNoU.js"), "Cmp_component_handleClick_1_3TrHxsRcNoU", [toggleSig]);
	return /* @__PURE__ */ _jsxSorted("button", { data-open: toggleSig.value ? true : undefined }, { on:click: handleClick$ }, "Removing data-open re-renders", 3, null);
};


None
/*
{
  "origin": "ternary_prop.tsx",
  "name": "Cmp_component_wXRs53PuG1k",
  "entry": null,
  "displayName": "ternary_prop.tsx_Cmp_component",
  "hash": "wXRs53PuG1k",
  "canonicalFilename": "ternary_prop.tsx_Cmp_component_wXRs53PuG1k",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Cmp_component_wXRs53PuG1k",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= ./ternary_prop.tsx_Cmp_component_handleClick_1_3TrHxsRcNoU.js (ENTRY POINT)==

export const Cmp_component_handleClick_1_3TrHxsRcNoU = () => {
	const [toggleSig] = useLexicalScope();
	toggleSig.value = !toggleSig.value;
};


None
/*
{
  "origin": "ternary_prop.tsx",
  "name": "Cmp_component_handleClick_1_3TrHxsRcNoU",
  "entry": null,
  "displayName": "ternary_prop.tsx_Cmp_component_handleClick_1",
  "hash": "3TrHxsRcNoU",
  "canonicalFilename": "ternary_prop.tsx_Cmp_component_handleClick_1_3TrHxsRcNoU",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Cmp_component_handleClick_1_3TrHxsRcNoU",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= ternary_prop.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
export const Cmp = componentQrl(qrl(() => import("./ternary_prop.tsx_Cmp_component_wXRs53PuG1k.js"), "Cmp_component_wXRs53PuG1k"));


None
== DIAGNOSTICS ==

[]
