optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_transform_qrl_in_regular_prop.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $ } from '@qwik.dev/core';
export const Cmp = component$(() =>
	<Cmp foo={$(() => console.log('hi there'))}>Hello Qwik</Cmp>);

============================= test.tsx_Cmp_component_4ryKJTOKjWE.tsx (ENTRY POINT)==

import { Cmp } from "./test";
import { _jsxSorted, qrl } from "@qwik.dev/core";
const i_iPpdemxi0uE = ()=>import("./test.tsx_Cmp_component_Cmp_foo_iPpdemxi0uE");
export const Cmp_component_4ryKJTOKjWE = ()=>_jsxSorted(Cmp, { foo: /*#__PURE__*/ qrl(i_iPpdemxi0uE, "Cmp_component_Cmp_foo_iPpdemxi0uE") }, null, "Hello Qwik", 3, null);


None
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "test.tsx_Cmp_component_4ryKJTOKjWE",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    78,
    145
  ]
}
*/
============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_iPpdemxi0uE = ()=>import("./test.tsx_Cmp_component_Cmp_foo_iPpdemxi0uE");
const i_4ryKJTOKjWE = ()=>import("./test.tsx_Cmp_component_4ryKJTOKjWE");
export const Cmp = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_4ryKJTOKjWE, "Cmp_component_4ryKJTOKjWE"));


None
============================= test.tsx_Cmp_component_Cmp_foo_iPpdemxi0uE.tsx (ENTRY POINT)==

export const Cmp_component_Cmp_foo_iPpdemxi0uE = ()=>console.log("hi there");


None
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_Cmp_foo_iPpdemxi0uE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component_Cmp_foo",
  "hash": "iPpdemxi0uE",
  "canonicalFilename": "test.tsx_Cmp_component_Cmp_foo_iPpdemxi0uE",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    97,
    126
  ]
}
*/
== DIAGNOSTICS ==

[]
